# my-prefect-server

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PICKUP-NOTES.md  README.md  justfile  prefect.yaml  pyproject.toml
.tangled/workflows/: deploy.yml
analytics/: dbt_project.yml
analytics/models/enrichment/: int_github_issues_scored.sql  int_phi_user_profiles.sql  int_tangled_items_scored.sql
analytics/models/marts/: github_action_items.sql  hub_action_items.sql
analytics/models/staging/: _sources.yml  stg_github_issues.sql  stg_liked_posts.sql  stg_likes.sql  stg_phi_interactions.sql  stg_phi_observations.sql  stg_tangled_items.sql
analytics/profiles/: profiles.yml
analytics/seeds/: known_contributors.csv
deploy/: cluster-issuer.yaml  exporter-values.yaml  grafana-ingress.yaml  hub-deployment.yaml  hub-ingress.yaml  monitoring-values.yaml  prefect-certificate.yaml  prefect-ingress-route.yaml  prefect-values.yaml  results-pvc.yaml  worker.yaml
deploy/dashboards/: executive-overview.json  github-intelligence.json
docs/: hub.md
flows/: atlas.py  brief.py  cleanup.py  compact.py  curate.py  diagnostics.py  enrich.py  gh_notifications.py  ingest.py  morning.py  pds_records.py  tangled_items.py  transform.py  weave.py
infra/: main.tf  outputs.tf  variables.tf  versions.tf
notes/: journey.md  read-only-ui.md
prefect/: main.tf  variables.tf  versions.tf
repros/: recreate_connections.py
scripts/: patch_work_pool.py
web/: Dockerfile  bun.lockb  package.json
web/src/: app.css
web/src/lib/: briefing-styles.ts  format.ts  types.ts
web/src/lib/components/: Briefing.svelte  CardRow.svelte  CardTable.svelte  (+4 more)
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
(+8 files in other folders)
