[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-prefect-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mps",
    "dbt-duckdb>=1.9",
    "prefect-dbt>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/mps/src/mps"]

[tool.uv.sources]
mps = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ty>=0.0.23",
]

[tool.ty.src]
include = ["flows", "packages/mps/src"]
exclude = ["**/__pycache__", ".venv", ".git"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.terminal]
error-on-warning = true
